src/test/ui/terr-in-field.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/terr-in-field.rs:13:5
   |
LL |     want_foo(b);
   |     ^^^^^^^^^-^
   |              |
   |              expected `Foo`, found `Bar`
   |
note: function defined here
  --> $DIR/terr-in-field.rs:11:4
   |
LL | fn want_foo(f: Foo) {}
   |    ^^^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     want_foo({Foo});
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
